# JailbreakEval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.bib  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  evaluator-request.md
.github/workflows/: publish.yaml  tests.yaml
data/: JAILJUDGEmini.csv  Safe-RLHFmini.csv  example.csv  tiny.csv
docs/: DEVELOPMENT.md
examples/: autodan_recheck.py  intergrate_with_easyjailbreak.py  quick_start.py  runall.sh
jailbreakeval/: __init__.py  utils.py
jailbreakeval/commands/: main.py
jailbreakeval/configurations/: chat_configuration.py  configuration_base.py  string_matching_configuration.py  text_classifier_configuration.py  voting_configuration.py
jailbreakeval/evaluators/: chat_evaluator.py  evaluator_base.py  string_matching_evaluator.py  text_classification_evaluator.py  types.py  voting_evaluator.py
jailbreakeval/presets/: HFChat-dubey2024llama-llamaguard3.yaml  HFChat-inan2023llama-llamaguard.yaml  HFChat-inan2023llama-llamaguard2.yaml  HFChat-inan2024llama-llamaguard3.yaml  HFTextClassification-ji2023beavertails-beaver-dam-7b.yaml  HFTextClassification-wang2023donotanswer-longformer-action.yaml  HFTextClassification-wang2023donotanswer-longformer-harmful.yaml  HFTextClassification-yu2023gptfuzzer-GPTFuzz.yaml  OpenAIChat-liu2024autodan-Recheck.yaml  OpenAIChat-qi2023fine-Meta.yaml  OpenAIChat-qi2023fine-OpenAI.yaml  (+13 more)
tests/: testing_utils.py
(+27 files in other folders)
